--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -3,10 +3,10 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "ConnectionStrings": {
-      "ConnectionString": "Server=WIP-PC;Database=UserDB;Trusted_Connection=True;TrustServerCertificate=True"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConnectionString": "Server=WIP-PC;Database=UserDB;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
